[package]
name = "band-protocol-rs"
version = "0.1.0"
edition = "2021"
description = "Wire protocol for inter-agent communication in a musical ensemble"
license = "MIT"
repository = "https://github.com/SuperInstance/band-protocol-rs"
keywords = ["music", "midi", "protocol", "agent", "band"]
categories = ["multimedia::audio", "encoding"]

[dependencies]
