[package]
name = "band-protocol-rs"
version = "0.1.0"
edition = "2021"
description = "MIDI+t-minus wire protocol for Self-Improving Band"
license = "MIT"
repository = "https://github.com/SuperInstance/band-protocol-rs"
keywords = ["midi", "protocol", "music", "wire", "band"]
categories = ["multimedia::audio", "network-programming"]
